test(client): cover audit gaps (overload return, WS, scenarios, exporter, merge)
Address test-audit gaps:
- RequestExecutor: executeRequest(id, HttpRequest) return value on success/failure
  and HttpTimeoutException -> recordTimeout classification.
- MetricsCollector: recordRequestStart(id), recordOutcome, recordEndToEndLatency
  (the WebSocket / single-latency-pipeline entry points).
- JsonExporter: assert the latency.histogram field exists and decodes (the merge
  feature depends on it).
- ExecutionController scenarios: header extraction (not just body regex), and the
  ramp-from-zero test now asserts traffic was actually issued.
- WebSocketExecutor.toWebSocketUri null/blank rejection.
- ExecutionResourceManager builds + runs with a null threadPool (now optional).
- SLA p50-alone branch; DistributedMerger no-histogram + summed timeouts.
- New HttpUtilsTest for the now-live estimateRequestSize + URL helpers.

394 tests green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>